<resources>
    <string name="app_name">SILK</string>

    <!--    TextView-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvAuthWelcomeTitle">Hai, <b>Selamat Datang</b></string>
    <string name="tvAuthWelcomeDesc">Silahkan login untuk melanjutkan</string>
    <string name="tvAuthForgotPassword">Lupa Password anda ?</string>
    <string name="tvAuthRegisterTitle">Belum punya akun ?</string>
    <string name="tvAuthRegisterDesc">Daftar sekarang</string>
    <string name="tvAuthLoginTitle">Sudah punya akun ?</string>
    <string name="tvAuthLoginDesc">Login sekarang</string>
    <string name="tvCompanyCredit">&#169; SILK. all right reserved.</string>

    <!--    InputText-->
    <string name="itvTxtEmailTitle">Email</string>
    <string name="itvTxtEmailHint">Masukkan email anda</string>
    <string name="itvTxtPasswordTitle">Password</string>
    <string name="itvTxtPasswordHint">Masukkan password anda</string>
    <string name="itvTxtFirstNameTitle">Nama Depan</string>
    <string name="itvTxtFirstNameHint">Jhon</string>
    <string name="itvTxtLastNameTitle">Nama Belakang</string>
    <string name="itvTxtLastNameHint">Doe</string>
    <string name="itvTxtKTPTitle">No. KTP</string>
    <string name="itvTxtKTPHint">Masukkan No. KTP anda</string>
    <string name="itvTxtPhoneTitle">No.Telpon</string>
    <string name="itvTxtPhoneHint">+628xxxxxxxxxx</string>
    <string name="itvTxtConfirmPasswordTitle">Konfirmasi Password</string>
    <string name="itvTxtConfirmPasswordHint">Konfirmasi password anda</string>
    <string name="itvTxtWarning">Kolom ini wajib diisi</string>
    <string name="itvTxtWarningMismatch">Password dan konfirmasi password harus sama.</string>

    <!--    Button-->
    <string name="btnTxtLogin">Login</string>
    <string name="btnTxtRegister">Register</string>
    <string name="btnTxtLogout">Logout</string>
    <string name="btnTxtSelengkapnya">Selengkapnya</string>

    <!--    Toast-->
    <string name="toastUnderDev">Fitur ini masih dalam tahap pengembangan, Silahkan coba lagi nanti</string>
    <string name="toastLoginFailed">Login gagal, silahkan coba lagi nanti</string>
    <string name="toastLoginSuccess">Login berhasil! Anda akan diarahkan ke dashboard.</string>
    <string name="toastLogoutSuccess">Anda telah berhasil keluar. Jangan ragu untuk kembali berkunjung!</string>

    <!--    RecyclerView-->
    <string name="tvDummyRating">5</string>
    <string name="tvDummyProductName">Suntik Steril</string>
    <string name="tvDummyPrice">Rp. 10.000</string>
    <string name="tvDummyStockStatus">Ready Stok</string>

    <!--    Drawer Navigation-->
    <string name="drawerTxtName"><b>Angga</b> Praja</string>
    <string name="drawerTxtMembership">Membership BBLK</string>
    <string name="drawerTxtFollowUs">Ikuti kami di</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <!--    Menu-->
    <string name="drawerMenuProfile">Profile Saya</string>
    <string name="drawerMenuSettings">Pengaturan</string>
    <string name="toolbarMenuCart">Kereta Belanja</string>
    <string name="toolbarMenuNotification">Notifikasi</string>

    <!--    Banner-->
    <string name="bannerTxtTitle1">Solusi, <b>Kesehatan Anda</b></string>
    <string name="bannerTxtDesc1">Update informasi seputar kesehatan semua bisa disini !</string>
    <string name="bannerTxtTitle2"><b>Layanan Khusus</b></string>
    <string name="bannerTxtDesc2">Tes Covid 19, Cegah Corona Sedini Mungkin</string>
    <string name="bannerTxtAction2">Daftar Tes</string>
    <string name="bannerTxtTitle3"><b>Track Pemeriksaan</b></string>
    <string name="bannerTxtDesc3">Kamu dapat mengecek progress pemeriksaanmu disini</string>
    <string name="bannerTxtAction3">Track</string>
</resources>