<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_circular_rectangle_white_16"
    android:paddingVertical="22dp"
    android:paddingHorizontal="10dp">

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="textEnd"
        android:fontFamily="@font/proximanova_regular"
        android:textStyle="bold"
        android:textColor="@color/tin_soldier"
        android:textSize="16sp"
        android:text="@string/tvDummyRating"/>

    <ImageView
        android:id="@+id/ivStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/tvRating"
        app:layout_constraintTop_toTopOf="@+id/tvRating"
        app:layout_constraintBottom_toBottomOf="@+id/tvRating"
        android:src="@drawable/ic_star"/>

    <ImageView
        android:id="@+id/ivProduct"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivStar"
        android:src="@drawable/sample_product"/>

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProduct"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/proximanova_regular"
        android:textSize="14sp"
        android:textColor="@color/midnight_melancholia"
        android:text="@string/tvDummyProductName"/>

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvProductName"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/proximanova_regular"
        android:textSize="12sp"
        android:textColor="@color/philippine_orange"
        android:text="@string/tvDummyPrice"/>

    <TextView
        android:id="@+id/tvStockStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvPrice"
        app:layout_constraintBottom_toBottomOf="@id/tvPrice"
        android:paddingVertical="2dp"
        android:paddingHorizontal="5dp"
        android:fontFamily="@font/proximanova_regular"
        android:textSize="11sp"
        android:textColor="@color/green_glutton"
        android:background="@drawable/bg_circular_rectangle_neomint"
        android:text="@string/tvDummyStockStatus"/>


</androidx.constraintlayout.widget.ConstraintLayout>