<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@null"
    android:padding="5dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="18sp"
        android:fontFamily="@font/gilroy_bold"
        android:textColor="@color/midnight_melancholia"
        android:text="@string/itvTxtEmailTitle"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clEditText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="21dp"
        android:paddingVertical="8dp"
        android:background="@drawable/bg_circular_rectangle_white">

        <View
            android:id="@+id/viewBorder"
            android:layout_width="1dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/tin_soldier"
            android:visibility="gone"
            tools:visibility="visible"/>

        <EditText
            android:id="@+id/etInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/viewBorder"
            app:layout_constraintEnd_toStartOf="@+id/ivReveal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="3dp"
            android:background="@null"
            android:fontFamily="@font/proximanova_regular"
            android:hint="@string/itvTxtEmailHint"
            android:textColor="@color/midnight_melancholia"
            android:textSize="12sp"
            android:textColorHint="@color/rhine_castle"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <ImageView
            android:id="@+id/ivReveal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_eye"
            android:visibility="gone"
            tools:visibility="visible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clEditText"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/gilroy_regular"
        android:textSize="12sp"
        android:textColor="@color/alarm"
        android:text="@string/itvTxtWarning"
        android:visibility="gone"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>